# playlist-from-subs

./: .dockerignore  .env.example  .gitignore  .versionrc.json  CHANGELOG.md  Dockerfile  README.md  auth.py  docker-compose.yml  dryrun.sh  env-debug.sh  fly.toml.example  main.py  package.json  pnpm-lock.yaml  pyproject.toml  quota-test.sh  requirements.txt  reset-auth.sh  run.sh  utils.py  weekly.sh  youtube_api.py
.github/: dependabot.yml
.github/workflows/: cron-sync.example.yml  docker-publish.yml
dashboard/: README.md  channels.html  channels.js  config.html  config.js  index.html  playlist.json  script.js  styles.css
dashboard/backend/: README.md  app.py  channels_api.py  config_api.py  config_manager.py  run.py  stats_api.py  test_backend.py
docker/: entrypoint.sh
docs/: DEPLOY.md  PHASE2_SETUP.md  PHASE3_DESIGN.md  PHASE5_DESIGN.md  PLAYLIST_IMPROVEMENTS.md  RELEASE_PROCESS.md
docs/deploy/: docker.md  fly.md  github-actions.md  oauth-bootstrap.md
scripts/: bump-pyproject.js  bump-pyproject.test.js  bump-uv-lock.js  bump-uv-lock.test.js  csv_to_json.py  release.sh
tests/: test_data_dir.py  test_dry_run_playlist.py
yt_sub_playlist/: __init__.py  __main__.py
yt_sub_playlist/auth/: __init__.py  oauth.py
yt_sub_playlist/config/: __init__.py  env_loader.py  quota_costs.py  schema.py  youtube_quota_costs.json
yt_sub_playlist/core/: __init__.py  playlist_manager.py  quota_tracker.py  video_filtering.py  youtube_client.py
yt_sub_playlist/data/: api_call_log.json
yt_sub_playlist/reports/: videos_added.csv
yt_sub_playlist/scripts/: dryrun.sh  (+4 more)
(+3 files in other folders)
