[project]
name = "yt-sub-playlist"
version = "4.1.0"
description = "Automatically sync YouTube subscription uploads into a custom playlist"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client==2.198.0",
  "google-auth==2.55.1",
  "google-auth-oauthlib==1.4.0",
  "google-auth-httplib2==0.4.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dashboard = [
  "Flask==3.0.0",
  "Flask-CORS==4.0.0",
  "Werkzeug==3.0.6",
]

[project.scripts]
yt-sub-playlist = "yt_sub_playlist.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt_sub_playlist"]
